src/seqvars/query/snapshots/varfish_server_worker__seqvars__query__schema__test__sequence_variant_from_vcf@Case_1.ingested.vcf-59.snap
---
source: src/seqvars/query/schema.rs
expression: "&seqvar"
---
chrom: MT
pos: 16184
reference: C
alternative: T
ann_fields: []
gnomad_exomes_an: 0
gnomad_exomes_hom: 0
gnomad_exomes_het: 0
gnomad_exomes_hemi: 0
gnomad_genomes_an: 0
gnomad_genomes_hom: 0
gnomad_genomes_het: 0
gnomad_genomes_hemi: 0
helix_an: 0
helix_hom: 0
helix_het: 0
inhouse_an: 0
inhouse_hom: 0
inhouse_het: 0
inhouse_hemi: 0
call_info:
  Case_1_father-N1-DNA1-WGS1:
    genotype: /0/0
    quality: 99
    dp: 1407
    ad: 1
    phasing_id: ~
  Case_1_index-N1-DNA1-WGS1:
    genotype: /1/1
    quality: 99
    dp: 1969
    ad: 1969
    phasing_id: ~
  Case_1_mother-N1-DNA1-WGS1:
    genotype: /1/1
    quality: 99
    dp: 1478
    ad: 1478
    phasing_id: ~
